# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
import("//foundation/distributeddatamgr/data_share/datashare.gni")
import("//foundation/distributeddatamgr/relational_store/relational_store.gni")

config("rdb_data_ability_adapter_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include",
    "${datashare_base_path}/interfaces/inner_api/common/include",
    "${datashare_base_path}/interfaces/inner_api/consumer/include",
    "${datashare_base_path}/interfaces/inner_api/provider/include",
    "${relational_store_innerapi_path}/rdb/include",
    "${datashare_common_native_path}/include",
  ]
}

config("rdb_data_ability_adapter_public_config") {
  visibility = [ ":*" ]
  include_dirs = [ "include" ]
}

object_source_config = [
  "${relational_store_native_path}/rdb_data_ability_adapter/src/rdb_data_ability_utils.cpp",
  "${relational_store_native_path}/rdb_data_ability_adapter/src/result_set_utils.cpp",
]

object_external_deps_config = [
  "c_utils:utils",
  "relational_store:native_dataability",
  "relational_store:native_rdb",
]

ohos_shared_library("rdb_data_ability_adapter") {
  sources = object_source_config

  configs = [ ":rdb_data_ability_adapter_config" ]

  subsystem_name = "distributeddatamgr"
  part_name = "relational_store"

  external_deps = object_external_deps_config

  public_configs = [ ":rdb_data_ability_adapter_public_config" ]
  cflags_cc = [ "-fvisibility=hidden" ]
}

ohos_static_library("rdb_data_ability_adapter_static") {
  sources = object_source_config

  configs = [ ":rdb_data_ability_adapter_config" ]

  external_deps = object_external_deps_config

  public_configs = [ ":rdb_data_ability_adapter_public_config" ]
}
