# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
import("//foundation/distributeddatamgr/relational_store/relational_store.gni")

config("rdb_data_ability_adapter_config") {
  visibility = [ ":*" ]
  if (!is_mingw && !is_mac) {
    cflags_cc = [ "-fvisibility=hidden" ]
  }
  include_dirs = [
    "include",
    "${datashare_path}/common/include/",
    "${relational_store_innerapi_path}/rdb/include",
    "${relational_store_native_path}/rdb/include",
    "${common_tool_path}/",
  ]
}

config("rdb_data_ability_adapter_public_config") {
  visibility = [ ":*" ]
  include_dirs = [ "include" ]
}

ohos_shared_library("rdb_data_ability_adapter") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  sources = [
    "${relational_store_native_path}/rdb_data_ability_adapter/src/rdb_data_ability_utils.cpp",
    "${relational_store_native_path}/rdb_data_ability_adapter/src/result_set_utils.cpp",
  ]

  configs = [ ":rdb_data_ability_adapter_config" ]

  subsystem_name = "distributeddatamgr"
  part_name = "relational_store"

  deps = [
    "${relational_store_innerapi_path}/dataability:native_dataability",
    "${relational_store_innerapi_path}/rdb:native_rdb",
  ]

  external_deps = [ "c_utils:utils" ]

  public_configs = [ ":rdb_data_ability_adapter_public_config" ]

  innerapi_tags = [ "platformsdk" ]
}
